@@ -227,11 +227,11 @@ public class SpecimenDaoTest_Aggregations {
     Map<String, Long> result = dao.getDistinctValues("recordBasis", null);
 
     Map<String, Long> expectedResult = new HashMap<String, Long>();
-    expectedResult.put("PreservedSpecimen", new Long(5));
-    expectedResult.put("Herbarium sheet", new Long(2));
-    expectedResult.put("OtherSpecimen", new Long(2));
-    expectedResult.put("Wood sample", new Long(2));
-    expectedResult.put("FossilSpecimen", new Long(1));
+    expectedResult.put("PreservedSpecimen", Long.valueOf(5));
+    expectedResult.put("Herbarium sheet", Long.valueOf(2));
+    expectedResult.put("OtherSpecimen", Long.valueOf(2));
+    expectedResult.put("Wood sample", Long.valueOf(2));
+    expectedResult.put("FossilSpecimen", Long.valueOf(1));
 
     assertEquals("01", expectedResult.size(), result.size());
     int i = 1;
@@ -252,11 +252,11 @@ public class SpecimenDaoTest_Aggregations {
     Map<String, Long> result = dao.getDistinctValues(field, null);
 
     Map<String, Long> expectedResult = new HashMap<String, Long>();
-    expectedResult.put("Compositae", new Long(6));
-    expectedResult.put("Apidae", new Long(1));
-    expectedResult.put("Mytilidae", new Long(1));
-    expectedResult.put("Naticidae", new Long(1));
-    expectedResult.put("Ussuritidae", new Long(1));
+    expectedResult.put("Compositae", Long.valueOf(6));
+    expectedResult.put("Apidae", Long.valueOf(1));
+    expectedResult.put("Mytilidae", Long.valueOf(1));
+    expectedResult.put("Naticidae", Long.valueOf(1));
+    expectedResult.put("Ussuritidae", Long.valueOf(1));
 
     assertEquals("01", expectedResult.size(), result.size());
     int i = 1;
@@ -280,11 +280,11 @@ public class SpecimenDaoTest_Aggregations {
     Map<String, Long> result = dao.getDistinctValues(field, querySpec);
 
     Map<String, Long> expectedResult = new HashMap<String, Long>();
-    expectedResult.put("Compositae", new Long(6));
-    expectedResult.put("Apidae", new Long(1));
-    expectedResult.put("Ussuritidae", new Long(1));
-    expectedResult.put("Mytilidae", new Long(1));
-    expectedResult.put("Naticidae", new Long(1));
+    expectedResult.put("Compositae", Long.valueOf(6));
+    expectedResult.put("Apidae", Long.valueOf(1));
+    expectedResult.put("Ussuritidae", Long.valueOf(1));
+    expectedResult.put("Mytilidae", Long.valueOf(1));
+    expectedResult.put("Naticidae", Long.valueOf(1));
 
     assertEquals("01", expectedResult.size(), result.size());
     int i = 1;
@@ -314,19 +314,19 @@ public class SpecimenDaoTest_Aggregations {
     Iterator<Map.Entry<String, Long>> entries = result.entrySet().iterator();
     Map.Entry<String, Long> entry = entries.next();
     assertEquals("02", "Ussuritidae", entry.getKey());
-    assertEquals("03", new Long(1), entry.getValue());
+    assertEquals("03", Long.valueOf(1), entry.getValue());
     entry = entries.next();
     assertEquals("04", "Naticidae", entry.getKey());
-    assertEquals("05", new Long(1), entry.getValue());
+    assertEquals("05", Long.valueOf(1), entry.getValue());
     entry = entries.next();
     assertEquals("06", "Mytilidae", entry.getKey());
-    assertEquals("07", new Long(1), entry.getValue());
+    assertEquals("07", Long.valueOf(1), entry.getValue());
     entry = entries.next();
     assertEquals("08", "Compositae", entry.getKey());
-    assertEquals("09", new Long(6), entry.getValue());
+    assertEquals("09", Long.valueOf(6), entry.getValue());
     entry = entries.next();
     assertEquals("10", "Apidae", entry.getKey());
-    assertEquals("11", new Long(1), entry.getValue());
+    assertEquals("11", Long.valueOf(1), entry.getValue());
   }
 
   /*
