@@ -33,7 +33,6 @@ import static org.hamcrest.Matchers.equalTo;*/
 /**
  * Test class for ConfigObject.java
  */
-@SuppressWarnings({"static-method","cast"})
 public class ConfigObjectTest {
 
     ConfigObject configObject;
@@ -341,7 +340,7 @@ public class ConfigObjectTest {
     @Test
     public void testRequiredStringClassOfT_01() {
 
-        Integer valInteger = new Integer(1);
+        Integer valInteger = Integer.valueOf(1);
         String valString = "1";
         Double valDouble = 1.0;
         Short valueShort = 1;
